--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "jest": "~29.7.0",
+    "jest-expo": "~52.0.6",
     "lucide-react-native": "^0.503.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
